# etherscan_ingestor

./: .gitignore  README.md
docs/: notes_api.md  notes_code.md  notes_commands.md  notes_project_design.md  notes_qa.md  notes_questions.md  notes_rewrite.md  notes_tests.md  notes_threading.md  notes_todo.md
nascent_etherscan_ingestor/: .env.example  .gitignore  Makefile  docker-compose.yaml  pyproject.toml  pytest.ini
nascent_etherscan_ingestor/.github/workflows/: tests.yml
nascent_etherscan_ingestor/scripts/: build.sh  detached_start.sh  lint.sh  solution.sh  start.sh  test.sh
nascent_etherscan_ingestor/src/: setup.py
nascent_etherscan_ingestor/src/assignment/: config.py  db.py  ingest.py  logger.py  models.py
nascent_etherscan_ingestor/tests/integration/: test_integration.py
nascent_etherscan_ingestor/tests/unit/: test_db.py  test_ingest.py
nascent_etherscan_ingestor/tests/utils/: test_db.py
nascent_frontend/: .env.example  .gitignore  babel.config.js  jest.config.js  package.json  tsconfig.json
nascent_frontend/components/AggregatedTable/: AggregatedTable.tsx
nascent_frontend/components/DualFieldSearchBar/: DualFieldSearchBar.module.css  DualFieldSearchBar.tsx
nascent_frontend/components/TransactionTable/: TransactionTable.module.css  TransactionTable.tsx
nascent_frontend/pages/: index.tsx
nascent_frontend/pages/api/: aggregated.tsx  transactions.tsx
nascent_frontend/styles/: Home.module.css
nascent_frontend/styles/shared/: table.module.css
nascent_frontend/utils/: apiUtils.tsx  db_pool.tsx
(+2 files in other folders)
